# Mplay

./: .gitignore  AGENTS.md  DESIGN.md  PROCEDURE.md  PRODUCT.md  index.html  package-lock.json  package.json  plan.md
.impeccable/: design.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  media.rs  persistence.rs  scanner.rs  state.rs
src/lib/: queue-manager.svelte.js  store.svelte.js  types.ts
src/lib/components/: LibraryView.svelte  LyricsPanel.svelte  PlayerBar.svelte  PlaylistView.svelte  QueueView.svelte  Sidebar.svelte
